--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body, h1, h2, p, strong {
   margin: 0;
   padding: 0;
   font-size: 22px;
-  color: #FDFCFC
+  color: #FAFBFC
 }
 
 body {
@@ -31,8 +31,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 70%;
-  height: 500px;
+  width: 90%;
+  max-width: 980px;
   border-radius: 6px;
 }
 
@@ -47,11 +47,13 @@ body {
   flex: 2;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   background: #0065B7;
-  /* width: 90%; */
   border-radius: 6px;
+
+  width: 90%;
+  max-width: 940px;
 }
 
 form {
@@ -60,10 +62,11 @@ form {
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin: 8px;
 }
 
 .label-form {
-  color: rgb(57, 123, 11);
+  color: #FAFBFC;
   font-weight: bold;
   font-size: 2rem;
 }
@@ -83,11 +86,11 @@ form {
 
   box-shadow: 1px 5px 5px black;
 
-  margin: 12px;
+  margin: 12px 6px;
   border-radius: 50%;
 
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -101,11 +104,10 @@ form {
   display: flex;
   flex: 1;
   flex-wrap: wrap;
-  width: 75%;
-  justify-content: space-evenly;
+  width: 90%;
+  max-width: 760px;
+  justify-content: space-around;
   align-items: flex-end;
-
-  margin-top: 32px;
 }
 
 button {
@@ -118,9 +120,19 @@ button {
   width: 250px;
   font-size: 32px;
   padding: 12px;
-  margin-bottom: 64px;
+  margin-bottom: 6px;
 }
 
 button:hover {
   background: rgba(26, 152, 178, 0.1);
+}
+
+@media (max-width: 768px) {
+  .container-sorteio h1 {
+    font-size: 48px;
+  }
+  .container-sorteio {
+    max-width: 700px;
+  }
+
 }
