--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 90%;
   text-align: center;
   margin: 8px;
 }
@@ -77,6 +78,7 @@ form {
   font-size: 24px;
   text-align: center;
   border-radius: 6px;
+  margin: 4px 0px 12px 0px;
 }
 
 .numeroSorteado {
@@ -101,14 +103,17 @@ form {
   font-size: 50px;
 }
 
+input::placeholder {
+  color: #CCC;
+}
+
 .containerBtns {
   display: flex;
-  flex: 1;
   flex-wrap: wrap;
   width: 90%;
   max-width: 760px;
-  justify-content: space-around;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn {
@@ -120,7 +125,8 @@ form {
   width: 250px;
   font-size: 32px;
   padding: 12px;
-  margin-bottom: 6px;
+  margin-bottom: 12px;
+  margin-right: 12px;
 }
 
 .gerarNumero {
